@@ -1,6 +1,9 @@
 Pending changes in the mainline
 ===============================
 
+* New functions from the SDK wrapped in Python:
+  - orthanc.RegisterStorageCommitmentScpCallback()
+
 Maintenance:
 * Fix memory leaks when a python script calls orthanc.RestApiPost() and sibling methods,
   in IncomingHttpRequestFilter and in the CMove callback.
